# lcdproc_g15

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .prettierignore  .prettierrc  CONTRIBUTING.md  FAQ.md  GNUmakefile  INSTALL.md  Makefile.am  PKGBUILD  README.md  TODO.md  acinclude.m4  autogen.sh  compile_commands.json  configure.ac  hooks-pre-commit.template  lcdproc-g15.install  package-lock.json  package.json  pnpm-lock.yaml  setup-hooks.sh
.github/workflows/: code-quality.yml  device-tests.yml  integration-tests.yml
clients/: Makefile.am
clients/lcdexec/: Makefile.am  lcdexec.c  lcdexec.conf  menu.c  menu.h
clients/lcdproc/: Makefile.am  batt.c  batt.h  chrono.c  chrono.h  cpu.c  cpu.h  cpu_smp.c  cpu_smp.h  disk.c  disk.h  eyebox.c  eyebox.h  gkey_macro.c  gkey_macro.h  iface.c  iface.h  lcdproc.conf  load.c  load.h  machine.c  machine.h  machine_Linux.c  main.c  main.h  mem.c  mem.h  mode.c  mode.h  sysinfo.c  sysinfo.h  util.c  util.h
docs/: Doxyfile.in  DoxygenLayout.xml  Makefile.am  doxy-mainpage.md  todo-groups.h
server/: LCDd.conf  Makefile.am  client.c  client.h  clients.c  clients.h  driver.c  driver.h  drivers.c  drivers.h  input.c  input.h  main.c  main.h  menu.c  menu.h  menuitem.c  menuitem.h  menuscreens.c  menuscreens.h  parse.c  parse.h  render.c  render.h  screen.c  screen.h  screenlist.c  screenlist.h  serverscreens.c  serverscreens.h  sock.c  sock.h  widget.c  widget.h
server/commands/: client_commands.c  client_commands.h  command_list.c  command_list.h  menu_commands.c  menu_commands.h  screen_commands.c  screen_commands.h  server_commands.c  server_commands.h  widget_commands.c  widget_commands.h
server/drivers/: Makefile.am  adv_bignum.c  adv_bignum.h  debug.c  debug.h  g15-num.c  g15.c  g15.h  hidraw_lib.c  hidraw_lib.h  lcd.h  lcd_lib.c  lcd_lib.h  linux_input.c  linux_input.h
services/: Makefile.am  lcdd.service  lcdproc.service  ydotoold.service
shared/: LL.c  LL.h  Makefile.am  configfile.c  configfile.h  defines.h  environment.c  environment.h  getopt.c  getopt.h  getopt1.c  posix_wrappers.h  report.c  report.h  snprintf.c  snprintf.h  sockets.c  sockets.h  sring.c  sring.h  str.c  str.h
tests/: Makefile.am.dev  README.md  mock_g15.c  mock_g15.h  mock_hidraw_lib.c  mock_hidraw_lib.h  test_g15.c  test_integration_g15.c  test_unit_g15.c
tests/debug/: README.md  debug_keys.py  debug_rgb.py  lcdproc_debug.sh
